2023-07-22T08:20:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5629696695 # 628
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-22
* notice: last 14d: unq all: 6 35
* notice: prev accum: outdated-unq outdated-all / unq all: 186 414 / 207 448
* notice: next accum: outdated-unq outdated-all / unq all: 186 414 / 208 449
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-22]

2023-07-22T01:38:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5628089838 # 627
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-22
* notice: last 14d: unq all: 6 34
* notice: prev accum: outdated-unq outdated-all / unq all: 186 414 / 207 447
* notice: next accum: outdated-unq outdated-all / unq all: 186 414 / 207 448
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-07-21]

2023-07-21T08:22:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5620223587 # 625
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-21
* notice: last 14d: unq all: 6 33
* notice: prev accum: outdated-unq outdated-all / unq all: 186 414 / 206 446
* notice: next accum: outdated-unq outdated-all / unq all: 186 414 / 207 447
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-21]

2023-07-21T01:41:14Z: