@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-22T08:20:29Z",
-  "count_outdated" : 414,
-  "uniques_outdated" : 186,
+  "timestamp" : "2023-07-22T16:21:36Z",
+  "count_outdated" : 415,
+  "uniques_outdated" : 187,
   "count" : 449,
   "uniques" : 208,
   "clones" : [
-    {
-      "timestamp": "2023-07-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-09T00:00:00Z",
       "count": 4,
