@@ -1,3 +1,12 @@
+2023-07-22T16:21:36Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5631613066 # 629
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-22
+* notice: last 14d: unq all: 6 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 186 414 / 208 449
+* notice: next accum: outdated-unq outdated-all / unq all: 187 415 / 208 449
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-07-08] / []
+
 2023-07-22T08:20:29Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5629696695 # 628
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-22
